<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.bcit.votecanada.MainActivity"
    android:orientation="vertical">

    <!-- This linear layout will contain the main title and image
         next to the title. -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:orientation="horizontal">
         <Button
            android:id="@+id/findOffice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_title"
            android:textColor="@color/themeRed"
            android:textSize="@dimen/main_title"
            android:textStyle="bold|italic" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/icon" />
    </LinearLayout>

    <!-- This will display homepage image for the app -->
    <ImageView
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:src="@drawable/homepage" />

    <!-- Button that goes to the activity_routing xml -->
    <Button
        android:id="@+id/mapButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:layout_gravity="center_horizontal"
        android:onClick="onRoutingClick"
        android:text="@string/mapButton"
        android:layout_marginTop="30dp"/>

    <!-- Button that goes to the activity_party xml -->
    <Button
        android:id="@+id/partyButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:onClick="onPartyClick"
        android:text="@string/partyButton"
        android:background="@drawable/button"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

    <!-- Button that goes to the activity_party xml -->
    <Button
        android:id="@+id/checlistButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:onClick="onCheckListClick"
        android:text="@string/checklistButton"
        android:background="@drawable/button"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>
</LinearLayout>