<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="405dp">
        <LinearLayout
            android:background="@color/themeRed"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/party_image"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="35dp">
            </ImageView>
            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/party_leader"
                android:layout_gravity="center_horizontal"
                android:text="@string/leader"
                android:textColor="@color/white"
                android:textSize="21sp"
                android:textStyle="bold" />
            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/party_text"
                android:text="@string/party"
                android:textColor="@color/white"
                android:textSize="21sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal">
            </TextView>
        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="380dp"
            android:background="@color/white"
            android:layout_marginTop="300dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:weightSum="2"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <!-- Seats #-->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/seats"
                        android:textSize="20sp"
                        android:textStyle="bold">
                    </TextView>

                    <TextView
                        android:id="@+id/party_seats"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:textColor="@color/themeRed"
                        android:textSize="20sp"
                        android:textStyle="bold">
                    </TextView>
                </LinearLayout>
                <!-- Percentage #-->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/percentage"
                        android:textSize="20sp"
                        android:textStyle="bold">
                    </TextView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:id="@+id/party_percentage"
                        android:textColor="@color/themeRed"
                        android:textSize="20sp"
                        android:textStyle="bold">
                    </TextView>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="360dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ideo"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/themeRed"
            android:textStyle="bold">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/party_ideology"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>